--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,13 +1,17 @@
-<form class="navbar-form navbar-left form-search pull-right" role="search">
-  <div class="form-group ">
-    <input type="text" class="form-control search-query" placeholder="Search">
-  </div>
-</form>
-<ul class="nav nav-pills pull-right" role="tablist" >
-  <li class="active" role="presentation"><a ng-href="#">Home</a></li>
-  <li role="presentation" ><a ng-href="#/todolist">Todoist</a></li>
-  <li role="presentation"><a ng-href="#/about">About</a></li>
-  <li role="presentation"><a ng-href="#">Contact</a></li>
-</ul>
-
-<h3 class="text-muted header-title">My ToDoist </h3>
+<div class="logo-main logo">
+    <img src="/images/logo.png">
+    <div class="trademark"><span>My</span><span>TODOIST</span></div>
+</div>
+<div class="search-container">
+  <input type="text" class="form-control search-query" placeholder="Search">
+  <button class="search-btn"><span class="glyphicon glyphicon-search"></span></button>
+</div>
+<div class="menu-container">
+  <ul class="nav nav-pills pull-right" role="tablist" >
+    <li class="active" role="presentation"><a ng-href="#">Home</a></li>
+    <li role="presentation" ><a ng-href="#/todolist">Todoist</a></li>
+    <li role="presentation"><a ng-href="#/about">About</a></li>
+    <li role="presentation"><a ng-href="#">Contact</a></li>
+    <li role="presentation"><a ng-href="#/login">Sign In</a></li>
+  </ul>  
+</div>
