--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" type="text/css" href="login.css">
-</head>
-<body>
-	<div class="login-dlg">
-		<form>
-			<div>
-				<div class="fix-border">
-					<input type="text" placeholder="username"/>
-				</div>
-				<div class="fix-border transt">
-					<input type="text" value="test"/>
-				</div>
-			</div>
-			<div>
-				<div class="fix-border">
-					<input type="password" placeholder="password"/>
-				</div>
-			</div>
-			<button class="log-button">login</button>
-		</form>
-	</div>
-</body>
-</html>
+<div class="login-container">
+	<div class="logo">
+		<img src="/images/logo.png">
+		<div class="trademark"><span>My</span><span>TODOIST</span></div>
+	 </div>
+	 <form class="form" role="form">
+	 		<div class="form-group">
+	 			<label>Username</label>
+	 			<input type="text" class="form-control" placeholder="Username"/>
+	 		</div>
+	 		<div class="form-group">
+	 			<label>Password</label>
+	 			<input type="password" class="form-control" placeholder="Password"/>
+	 		</div>
+	 		<div class="form-group">
+	 			<input type="checkbox" />Remember Me
+	 			<button class="btn btn-default btn-primary">Login In</button>
+	 		</div>
+	 </form>
+</div>
