--- a/app/views/main.html
+++ b/app/views/main.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="item">
-      <img>
+      <img src="images/logo.jpg">
       <div class="carousel-caption">
          <div class="container">
             <p>
