--- a/app/views/header.html
+++ b/app/views/header.html
@@ -9,9 +9,9 @@
 <div class="menu-container">
   <ul class="nav nav-pills pull-right" role="tablist" >
     <li class="active" role="presentation"><a ng-href="#">Home</a></li>
-    <li role="presentation" ><a ng-href="#/todolist">Todoist</a></li>
+    <li role="presentation" ><a ng-href="#/todolist">Book List</a></li>
+    <li role="presentation"><a ng-href="#/movie">movie</a></li>
     <li role="presentation"><a ng-href="#/about">About</a></li>
-    <li role="presentation"><a ng-href="#">Contact</a></li>
     <li role="presentation"><a ng-href="#/login">Sign In</a></li>
   </ul>  
 </div>
